--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -42,7 +42,7 @@
               <img src="assets/img/logo.png" alt="Global">
               <p id="logoHeader">SongsHive</p>
             </a>
-            <button class="header--cta cta">Hello Ofek</button>
+            <button class="header--cta cta">Hello Guest</button>
             <div class="header--nav-toggle">
               <span></span>
             </div>
@@ -163,11 +163,9 @@
                 <h1>Artists</h1>
                 <div>
                   <div class="work-request--information">
-                    <form id="searchArtistForm">
-                      <input id="searchArtistInput" type="text" name="search" placeholder="Search"
-                        title="name must include only letters" pattern="^[a-zA-Z\s]+$" required>
-                      <button class="artiststBtns" id="searchArtistBtn">Search</button>
-                    </form>
+                    <input id="searchArtistInput" type="text" name="search" placeholder="Search"
+                      title="name must include only letters" pattern="^[a-zA-Z\s]+$" required>
+                    <button class="artiststBtns" id="searchArtistBtn">Search</button>
                     <button class="artiststBtns" id="showAllArtistsBtn">Show All</button>
                     <button class="artiststBtns" id="showFavoritesArtists">Show Favorites</button>
                   </div>
