disabled Hello Guest Button

--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -42,7 +42,7 @@
               <img src="assets/img/logo.png" alt="Global">
               <p id="logoHeader">SongsHive</p>
             </a>
-            <button class="header--cta cta is-active">Hello Guest</button>
+            <button class="header--cta cta is-active" disabled>Hello Guest</button>
             <div class="header--nav-toggle">
               <span></span>
             </div>
