--- a/SongsClient/404.html
+++ b/SongsClient/404.html
@@ -34,7 +34,7 @@
 <body>
   <h1>404 - Page Not Found</h1>
   <p>The page you are looking for does not exist.</p>
-  <p>Server is Down</p>
+  <p>Server/DB is Down</p>
 </body>
 
 </html>
