--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -29,7 +29,7 @@
       <img src="assets/img/logo.png" alt="Global">
       <p>SONGS</p>
     </a>
-    <p class="device-notification--message">Global has so much to offer that we must request you orient your device to
+    <p class="device-notification--message">SongsHive has so much to offer that we must request you orient your device to
       portrait or find a larger screen. You won't be disappointed.</p>
   </div>
   <div class="perspective effect-rotate-left">
