Hello name fix in login and logout

--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -75,7 +75,7 @@
                   </button>
                   <div id="adminBtns"></div>
                   <br>
-                  <span id="notMember">Not a Member? </span><button id="signUpLink" class="cta notMember"><u>Sign Up
+                  <span class="notMember">Not a Member? </span><button class="signUpLink cta notMember"><u>Sign Up
                       Now</u></button>
                   <img id="mainImage" src="assets/img/mainImage.png" alt="Welcome">
                 </div>
