filter by title in songs page

--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -106,6 +106,7 @@
                 <form id="searchForm" class="work-request">
                   <div class="work-request--options">
                     <span class="options-a">
+                      <span id="Filter">Filter by:</span>
                       <input id="opt-1" class="song-option" type="checkbox" checked name="song-option" value="songName">
                       <label for="opt-1">
                         Song Name
