--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -29,7 +29,8 @@
       <img src="assets/img/logo.png" alt="Global">
       <p>SONGS</p>
     </a>
-    <p class="device-notification--message">SongsHive has so much to offer that we must request you orient your device to
+    <p class="device-notification--message">SongsHive has so much to offer that we must request you orient your device
+      to
       portrait or find a larger screen. You won't be disappointed.</p>
   </div>
   <div class="perspective effect-rotate-left">
@@ -55,6 +56,7 @@
               <li><span>Artists</span></li>
               <li class="quizNav"><span>Quiz</span></li>
               <li id="loginLi"></li>
+              <li class="additions"></li>
             </ul>
           </nav>
           <ul class="l-main-content main-content">
@@ -184,6 +186,38 @@
             </li>
             <li class="l-section section">
               <div id="mainFormDiv" class="hire">
+              </div>
+            </li>
+            <li class="l-section section">
+              <div id="additionsPage" class="hire">
+                <h3 class="additionHeader">Hugging Face Text-To-Speech</h3>
+                <p class="additionDescription">User hears a personalized greeting when logging in or logging out.</p>
+
+                <h3 class="additionHeader">JS Speech to Text Library</h3>
+                <p class="additionDescription">User can search for a song by singing its lyrics using speech
+                  recognition.</p>
+
+                <h3 class="additionHeader">Deezer API</h3>
+                <p class="additionDescription">Integration of an external API (Deezer) to retrieve audio previews of
+                  songs.</p>
+
+                <h3 class="additionHeader">Last.fm API</h3>
+                <p class="additionDescription">Integration of an external API (Last.fm) to retrieve data about artists
+                  and songs.</p>
+
+                <h3 class="additionHeader">Artists Last.fm Page</h3>
+                <p class="additionDescription">User can view detailed information about artists and click on link to
+                  visit their Last.fm pages.</p>
+
+                <h3 class="additionHeader">Enhanced Quiz User Experience</h3>
+                <p class="additionDescription">The quiz includes special sounds and effects to enhance the user
+                  experience.</p>
+
+                <h3 class="additionHeader">Quiz Leaderboard</h3>
+                <p class="additionDescription">Users earn points for each correct answer, which are saved in the
+                  database. At the end of the quiz, there is an option to view the leaderboard, showing the top 5 users.
+                </p>
+
               </div>
             </li>
           </ul>
