updated additions responsive

--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -186,7 +186,7 @@
             </li>
             <li class="l-section section">
               <div id="additionsPage" class="hire">
-                <div class="contentWrapper">
+                <div class="container-fluid">
                   <h3 class="additionHeader">Hugging Face Text-To-Speech</h3>
                   <p class="additionDescription">User hears a personalized greeting when logging in or logging out.</p>
                   <h3 class="additionHeader">JS Speech to Text Library</h3>
