--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -190,18 +190,29 @@
                   <h3 class="additionHeader">Hugging Face Text-To-Speech</h3>
                   <p class="additionDescription">User hears a personalized greeting when logging in or logging out.</p>
                   <h3 class="additionHeader">JS Speech to Text Library</h3>
-                  <p class="additionDescription">User can search for a song by singing its lyrics using speech recognition.</p>
+                  <p class="additionDescription">User can search for a song by singing its lyrics using speech
+                    recognition.</p>
+                  <h3 class="additionHeader">YouTube API</h3>
+                  <p class="additionDescription">Generate a YouTube link for songs that allows users to navigate to the
+                    YouTube page for the song.</p>
                   <h3 class="additionHeader">Deezer API</h3>
-                  <p class="additionDescription">Integration of an external API (Deezer) to retrieve audio previews of songs.</p>
+                  <p class="additionDescription">Integration of an external API (Deezer) to retrieve audio previews of
+                    songs.</p>
                   <h3 class="additionHeader">Last.fm API</h3>
-                  <p class="additionDescription">Integration of an external API (Last.fm) to retrieve data about artists and songs.</p>                  <h3 class="additionHeader">Artists Last.fm Page</h3>
-                  <p class="additionDescription">User can view detailed information about artists and click on link to visit their Last.fm pages.</p>
+                  <p class="additionDescription">Integration of an external API (Last.fm) to retrieve data about artists
+                    and songs.</p>
+                  <h3 class="additionHeader">Artists Last.fm Page</h3>
+                  <p class="additionDescription">User can view detailed information about artists and click on link to
+                    visit their Last.fm pages.</p>
                   <h3 class="additionHeader">Enhanced Quiz User Experience</h3>
-                  <p class="additionDescription">The quiz includes special sounds and effects to enhance the user experience.</p>
+                  <p class="additionDescription">The quiz includes special sounds and effects to enhance the user
+                    experience.</p>
                   <h3 class="additionHeader">Quiz Leaderboard</h3>
-                  <p class="additionDescription">Users earn points for each correct answer, which are saved in the database. At the end of the quiz, there is an option to view the leaderboard, showing the top 5 users.</p>
+                  <p class="additionDescription">Users earn points for each correct answer, which are saved in the
+                    database. At the end of the quiz, there is an option to view the leaderboard, showing the top 5
+                    users.</p>
                 </div>
-              </div>              
+              </div>
             </li>
             <li class="l-section section">
               <div id="mainFormDiv" class="hire">
