--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -50,12 +50,12 @@
           <nav class="l-side-nav">
             <ul class="side-nav">
               <li id="HomeLi" class="is-active"><span>Home</span></li>
-              <li><span>Songs</span></li>
-              <li onclick="renderFavorites()"><span>Favorites</span></li>
+              <li class="side_songs"><span>Songs</span></li>
+              <li class="side_favorites" onclick="renderFavorites()"><span>Favorites</span></li>
               <li><span>Artists</span></li>
-              <li class="quizNav"><span>Quiz</span></li>
-              <li class="additions"></li>
-              <li id="loginLi"></li>
+              <li class="quizNav side_quiz"><span>Quiz</span></li>
+              <li class="additions side_additions"></li>
+              <li id="loginLi" class="side_login"></li>
             </ul>
           </nav>
           <ul class="l-main-content main-content">
