--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -210,8 +210,9 @@
                   <p class="additionDescription">Users earn points for each correct answer, which are saved in the
                     database. At the end of the quiz, there is an option to view the leaderboard, showing the top 5
                     users.</p>
-                    <h3 class="additionHeader">Song Comments and Deletion</h3>
-<p class="additionDescription">Users can now comment on songs, delete their own comments, and also see other users' comments on songs.</p>
+                  <h3 class="additionHeader">Song Comments and Deletion</h3>
+                  <p class="additionDescription">Users can now comment on songs, delete their own comments, and also see
+                    other users' comments on songs.</p>
                 </div>
               </div>
             </li>
