--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -200,6 +200,9 @@
                   <h3 class="additionHeader">Last.fm API</h3>
                   <p class="additionDescription">Integration of an external API (Last.fm) to retrieve data about artists
                     and songs.</p>
+                  <h3 class="additionHeader">Song Comments and Deletion</h3>
+                  <p class="additionDescription">Users have the ability to comment on songs, delete their own comments,
+                    and view comments made by other users.</p>
                   <h3 class="additionHeader">Artists Last.fm Page</h3>
                   <p class="additionDescription">User can view detailed information about artists and click on link to
                     visit their Last.fm pages.</p>
@@ -210,9 +213,6 @@
                   <p class="additionDescription">Users earn points for each correct answer, which are saved in the
                     database. At the end of the quiz, there is an option to view the leaderboard, showing the top 5
                     users.</p>
-                  <h3 class="additionHeader">Song Comments and Deletion</h3>
-                  <p class="additionDescription">Users can now comment on songs, delete their own comments, and also see
-                    other users' comments on songs.</p>
                 </div>
               </div>
             </li>
