--- a/SongsClient/index.html
+++ b/SongsClient/index.html
@@ -200,7 +200,7 @@
                   <h3 class="additionHeader">Last.fm API</h3>
                   <p class="additionDescription">Integration of an external API (Last.fm) to retrieve data about artists
                     and songs.</p>
-                  <h3 class="additionHeader">Song Comments</h3>
+                  <h3 class="additionHeader">Songs Comments</h3>
                   <p class="additionDescription">Users have the ability to comment on songs, delete their own comments,
                     and view comments made by other users.</p>
                   <h3 class="additionHeader">Artists Last.fm Page</h3>
