--- a/SongsClient/404.html
+++ b/SongsClient/404.html
@@ -29,12 +29,17 @@
       text-decoration: none;
     }
   </style>
+  <script>
+    function tryAgain(){
+      window.location.href = "index.html";
+    }
+  </script>
 </head>
 
 <body>
-  <h1>404 - Page Not Found</h1>
-  <p>The page you are looking for does not exist.</p>
-  <p>Server/DB is Down</p>
+  <h1>SongsHive is Currently Experiencing <br> Technical Difficulties</h1>
+  <p>Server or DB is Down</p>
+  <button id="tryAgain" style="font-size:24px; cursor: pointer;" onclick="tryAgain()">Try Again</button>
 </body>
 
 </html>
